Fix - Add z-index in style.css at .navbar

--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
     width: 100%;
     position: fixed;
     background-color: #080808;
+    z-index: 1;
 }
 
 nav {
